trunk/Archive2/d2/b299a85716d8ab/output
main.cpp: In substitution of 'template<class T> using return_type_t = typename return_type::type [with T = int (bad::*)(int, ...)]':
main.cpp:55:48:   required from here
main.cpp:47:52: error: invalid use of incomplete type 'struct return_type<int (bad::*)(int, ...)>'
 using return_type_t = typename return_type<T>::type;
                                                    ^
main.cpp:2:8: error: declaration of 'struct return_type<int (bad::*)(int, ...)>'
 struct return_type;
        ^
